fix fetch url and ids

--- a/public/add-house.html
+++ b/public/add-house.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-group">
                 <label>Furnishing Status</label>
-                <select  id="Furnished" name="furnished" required>
+                <select  id="furnished" name="furnished" required>
                     <option value="">Select Status</option>
                     <option value="Furnished">Furnished</option>
                     <option value="Unfurnished">Unfurnished</option>
