fix fetch url and ids

--- a/public/add-house.html
+++ b/public/add-house.html
@@ -161,7 +161,7 @@ if (addHouseForm) {
             furnished: document.getElementById('furnishing').value,
             description: document.getElementById('description').value,
             images: ["images/2bedroom.jpg"],
-            adminKey: document.getElementById('adminKey').value.
+            adminKey: document.getElementById('adminKey').value
         };
 
         const response = await fetch('/api/houses', {
