--- a/public/add-house.html
+++ b/public/add-house.html
@@ -158,7 +158,7 @@ if (addHouseForm) {
             location: document.getElementById('location').value,
             bedrooms: document.getElementById('bedrooms').value,
             bathrooms: document.getElementById('bathrooms').value,
-            furnished: document.getElementById('furnishing').value,
+            furnished: document.getElementById('furnished').value,
             description: document.getElementById('description').value,
             images: ["images/2bedroom.jpg"],
             adminKey: document.getElementById('adminKey').value
